--- a/index.html
+++ b/index.html
@@ -291,6 +291,10 @@
                 第一次输入0 → 第二次输入1 → 第三次输入2<br>
                 以此类推
             </div>
+            <div class="tip-box" style="background: rgba(220, 38, 38, 0.1); border-color: rgba(220, 38, 38, 0.3);">
+                <strong>⚠️ 重要提示：</strong><br>
+                锁仓不满7天解锁会销毁30％代币，请谨慎操作！
+            </div>
             <input type="number" id="unstakeIndex" placeholder="输入要取消锁仓的索引（从0开始）" min="0" step="1">
             <button id="unstakeBtn" class="btn-danger" disabled>🔓 取消锁仓</button>
             <div id="unstakeStatus" class="status"></div>
